Add JVM args for tests that are necessary when running on JDKs above 16